# media-parser

./: .gitignore  .markdownlint-cli2.cjs  Cargo.toml  README.md  package-lock.json  package.json
src/: errors.rs  lib.rs
src/avc/: annexb.rs  avc_type.rs  mod.rs  nalus.rs
src/bits/: doc.md  reader.rs
src/metadata/: detector.rs  doc.md  extractor.rs  mod.rs  probe.rs  types.rs
src/mp4/: avcc.rs  box.rs  doc.md  ftyp.rs  macros.rs  mdhd.rs  metadata_extractor.rs  mod.rs  moov.rs  moov_finder.rs  mvhd.rs  stco.rs  stsc.rs  stsd.rs  stsd_test.rs  stss.rs  stsz.rs  stts.rs  trak.rs  trak_test.rs  udta.rs  udta_test.rs
src/streams/: doc.md  http_stream_test.rs  mod.rs  seekable_http_stream.rs  seekable_stream.rs
src/subtitles/: analyzer.rs  doc.md  extractor.rs  mod.rs  parser.rs  types.rs  unit_test.rs  utils.rs
src/thumbnails/: analyzer.rs  decoder.rs  doc.md  extractor.rs  mod.rs  types.rs  unit_test.rs  utils.rs
tests/: metadata_local_test.rs  remote_tests.rs  subtitles_local_test.rs  thumbnails_local_test.rs
