[package]
name = "mediaparser"
version = "0.1.9"
edition = "2021"
description = "High-performance media file parser with streaming support for MP4, thumbnails, subtitles, and metadata extraction"
keywords = ["media", "parser", "mp4", "video", "thumbnails", "subtitles", "metadata", "streaming", "h264", "ffmpeg"]
categories = ["multimedia", "parsing", "streaming", "video", "audio"]
license = "MIT"
readme = "README.md"

[lib]
name = "mediaparser"

[dependencies]
openh264 = { version = "0.8.1", features = ["source"], default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
base64 = "0.21"
image = "0.24"
reqwest = { version = "0.11", features = ["blocking"] }
log = "0.4"
async-trait = "0.1"

[dev-dependencies]
proptest = "1.0"
tempfile = "3.0"
wiremock = "0.5"
tokio = { version = "1.0", features = ["full"] }
mockall = "0.11"
regex = "1.0"

[features]
